# iktodo

./: .TODO  .gitignore  Cargo.toml  Makefile  README.MD  cmd_add.go  cmd_done.go  cmd_list.go  db.go  go.mod  iktodo.go  main.go  task.go
cmd/: add.go  data.go  done.go  list.go  remove.go  search.go  update.go
common/: error.go  util.go
db/: db.go  sqlite.go
src/: app.rs  main.rs
task/: aggregate.go  task.go
