[package]
name = "iktodo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.2", features = ["derive"] }
colored = "2.1.0"
dirs = "5.0.1"
rusqlite = "0.31.0"


[profile.release]
lto = true

